fix bg img on mobile

--- a/styles.css
+++ b/styles.css
@@ -85,6 +85,12 @@ body {
 }
 
 @media only screen and (max-width: 640px) {
+    body {
+        background: var(--msd-pink-1) url('./assets/pink\ fractal\ mobile.png') no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+        min-height: 100vh;
+    }
     h1 {
         font-size: 50px;
         font-weight: bold;
